static/css/base.css
@import url('https://fonts.googleapis.com/css?family=Roboto:300,400|Muli:200,300');

html {
    height: 100%;
}

body {
    background-color: #050000;
    height: 100%;
}

li a {
    text-decoration: none;
    color: inherit;
    display: block;
    border: 1px transparent;
    border-bottom-style: solid;
    transition: 0.5s ease;
    white-space: nowrap;
}

a:hover {
    text-decoration: none;
    color: inherit;
}

li a:hover {
    text-decoration: none;
    border-bottom: solid;
    border-width: 1px;
    color: inherit;
}

#burger-1, #burger-2, #burger-3 {
    width: 1.8em;
    height: 0.2em;
    background-color: whitesmoke;
    margin-top: 0.4em;
    border-radius: 2px;
    transition: 0.5s ease;
}

.menu-container {
    font-family: "Muli", sans-serif;
    font-weight: 200;
    color: black;
    display: inline-block;

}

.cross #burger-1 {
    -webkit-transform: rotate(45deg) translate(0, 0.85em);
    transform: rotate(45deg) translate(0, 0.85em);
}

.cross #burger-3 {
    -webkit-transform: rotate(-45deg) translate(0, -0.85em);
    transform: rotate(-45deg) translate(0, -0.85em);
}

.cross #burger-2 {
    -webkit-transform: translate(8em, 0) rotate(-90deg);
    transform: translate(8em, 0) rotate(-90deg);
}

#hamburger {
    position: fixed;
    display: inline-block;
    cursor: pointer;
    margin-top: 0;
    margin-left: 1em;
    transition: 0.5s ease;
}

#menu {
    position: fixed;
    margin-top: 2.5em;
    width: 0;
    height: 100%;
    overflow: hidden;
    border-radius: 2px;
    transition: 0.5s ease;
    background-color: whitesmoke;
}

#menu li {
    list-style: none;
    display: inline-block;
    margin-top: 0.5em;
}

#menu ul {
    margin-top: 1em;
    padding-left: 1.5em;
}

.expose#menu {
    width: 10em;
}

#content {
    width: 100%;
    height: 100%;
    transition: 0.5s ease;
    z-index: 10;
    color: white;
    padding-left: 4em;
    font-family: "Muli", sans-serif;
    font-weight: 200;
}

#content.shimmy {
    transform: translate(10em);
    filter: blur(3px)
}

